src/parser.output
Terminals unused in grammar

   TOKEN_SINGLE_COMMENT
   TOKEN_BLOCK_COMMENT
   TOKEN_ERROR


Grammar

    0 $accept: program TOKEN_EOF

    1 program: decl_list TOKEN_EOF

    2 exprs_or_e: expr_list
    3           | %empty

    4 expr_list: expr TOKEN_COMMA expr_list
    5          | expr

    6 expr_or_e: expr
    7          | %empty

    8 expr: expr1 TOKEN_ASSIGN expr
    9     | expr1

   10 expr1: expr1 TOKEN_OR expr2
   11      | expr2

   12 expr2: expr2 TOKEN_AND expr3
   13      | expr3

   14 expr3: expr3 TOKEN_LT expr4
   15      | expr3 TOKEN_LE expr4
   16      | expr3 TOKEN_GT expr4
   17      | expr3 TOKEN_GE expr4
   18      | expr3 TOKEN_EQ expr4
   19      | expr3 TOKEN_NE expr4
   20      | expr4

   21 expr4: expr4 TOKEN_ADD expr5
   22      | expr4 TOKEN_HYPHEN expr5
   23      | expr5

   24 expr5: expr5 TOKEN_ASTERISK expr6
   25      | expr5 TOKEN_FSLASH expr6
   26      | expr5 TOKEN_PERCENT expr6
   27      | expr6

   28 expr6: expr7 TOKEN_EXPONENT expr6
   29      | expr7

   30 expr7: TOKEN_HYPHEN expr7
   31      | TOKEN_NOT expr7
   32      | expr8

   33 expr8: expr8 TOKEN_INCREMENT
   34      | expr8 TOKEN_DECREMENT
   35      | expr9

   36 expr9: TOKEN_LPAREN expr TOKEN_RPAREN
   37      | ident TOKEN_LPAREN exprs_or_e TOKEN_RPAREN
   38      | ident arr_idx
   39      | atomic

   40 atomic: TOKEN_TYPE_INT
   41       | TOKEN_TYPE_FLOAT
   42       | TOKEN_TYPE_STRING
   43       | TOKEN_TYPE_CHAR
   44       | TOKEN_TRUE
   45       | TOKEN_FALSE
   46       | TOKEN_LBRACE expr_list TOKEN_RBRACE
   47       | ident

   48 arr_idx: TOKEN_LBRACKET expr TOKEN_RBRACKET arr_idx
   49        | TOKEN_LBRACKET expr TOKEN_RBRACKET

   50 ident: TOKEN_IDENT

   51 type: TOKEN_CHAR
   52     | TOKEN_STRING
   53     | TOKEN_INT
   54     | TOKEN_FLOAT
   55     | TOKEN_BOOL
   56     | TOKEN_AUTO
   57     | TOKEN_VOID
   58     | TOKEN_ARRAY TOKEN_LBRACKET expr_or_e TOKEN_RBRACKET type
   59     | TOKEN_FUNC type TOKEN_LPAREN params_or_e TOKEN_RPAREN

   60 decl: ident TOKEN_COLON type TOKEN_ASSIGN TOKEN_LBRACE stmts_or_e TOKEN_RBRACE
   61     | ident TOKEN_COLON type TOKEN_ASSIGN expr TOKEN_SEMICOLON
   62     | ident TOKEN_COLON type TOKEN_SEMICOLON
   63     | ident TOKEN_COLON type

   64 decl_list: decl decl_list
   65          | %empty

   66 params_or_e: param_list
   67            | %empty

   68 param_list: param TOKEN_COMMA param_list
   69           | param

   70 param: ident TOKEN_COLON type

   71 stmts_or_e: stmt_list
   72           | %empty

   73 stmt_list: stmt stmt_list
   74          | stmt

   75 stmt: stmt1
   76     | stmt2

   77 stmt1: TOKEN_FOR TOKEN_LPAREN expr_or_e TOKEN_SEMICOLON expr_or_e TOKEN_SEMICOLON expr_or_e TOKEN_RPAREN stmt1
   78      | TOKEN_WHILE TOKEN_LPAREN expr TOKEN_RPAREN stmt1
   79      | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt2 TOKEN_ELSE stmt1
   80      | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt

   81 stmt2: TOKEN_FOR TOKEN_LPAREN expr_or_e TOKEN_SEMICOLON expr_or_e TOKEN_SEMICOLON expr_or_e TOKEN_RPAREN stmt2
   82      | TOKEN_WHILE TOKEN_LPAREN expr TOKEN_RPAREN stmt2
   83      | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt2 TOKEN_ELSE stmt2
   84      | stmt3

   85 stmt3: TOKEN_PRINT exprs_or_e TOKEN_SEMICOLON
   86      | TOKEN_RETURN expr_or_e TOKEN_SEMICOLON
   87      | TOKEN_LBRACE stmts_or_e TOKEN_RBRACE
   88      | expr TOKEN_SEMICOLON
   89      | decl


Terminals, with rules where they appear

TOKEN_EOF (0) 0 1
error (256)
TOKEN_IDENT (258) 50
TOKEN_TYPE_INT (259) 40
TOKEN_TYPE_FLOAT (260) 41
TOKEN_TYPE_STRING (261) 42
TOKEN_TYPE_CHAR (262) 43
TOKEN_ARRAY (263) 58
TOKEN_AUTO (264) 56
TOKEN_BOOL (265) 55
TOKEN_CHAR (266) 51
TOKEN_ELSE (267) 79 83
TOKEN_FALSE (268) 45
TOKEN_FLOAT (269) 54
TOKEN_FOR (270) 77 81
TOKEN_FUNC (271) 59
TOKEN_IF (272) 79 80 83
TOKEN_INT (273) 53
TOKEN_PRINT (274) 85
TOKEN_RETURN (275) 86
TOKEN_STRING (276) 52
TOKEN_TRUE (277) 44
TOKEN_VOID (278) 57
TOKEN_WHILE (279) 78 82
TOKEN_AND (280) 12
TOKEN_OR (281) 10
TOKEN_EQ (282) 18
TOKEN_LE (283) 15
TOKEN_GE (284) 17
TOKEN_LT (285) 14
TOKEN_GT (286) 16
TOKEN_NE (287) 19
TOKEN_NOT (288) 31
TOKEN_COLON (289) 60 61 62 63 70
TOKEN_SEMICOLON (290) 61 62 77 81 85 86 88
TOKEN_COMMA (291) 4 68
TOKEN_LBRACKET (292) 48 49 58
TOKEN_RBRACKET (293) 48 49 58
TOKEN_LBRACE (294) 46 60 87
TOKEN_RBRACE (295) 46 60 87
TOKEN_LPAREN (296) 36 37 59 77 78 79 80 81 82 83
TOKEN_RPAREN (297) 36 37 59 77 78 79 80 81 82 83
TOKEN_ASSIGN (298) 8 60 61
TOKEN_EXPONENT (299) 28
TOKEN_INCREMENT (300) 33
TOKEN_DECREMENT (301) 34
TOKEN_ADD (302) 21
TOKEN_HYPHEN (303) 22 30
TOKEN_ASTERISK (304) 24
TOKEN_FSLASH (305) 25
TOKEN_PERCENT (306) 26
TOKEN_SINGLE_COMMENT (307)
TOKEN_BLOCK_COMMENT (308)
TOKEN_ERROR (309)


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
program (56)
    on left: 1, on right: 0
exprs_or_e (57)
    on left: 2 3, on right: 37 85
expr_list (58)
    on left: 4 5, on right: 2 4 46
expr_or_e (59)
    on left: 6 7, on right: 58 77 81 86
expr (60)
    on left: 8 9, on right: 4 5 6 8 36 48 49 61 78 79 80 82 83 88
expr1 (61)
    on left: 10 11, on right: 8 9 10
expr2 (62)
    on left: 12 13, on right: 10 11 12
expr3 (63)
    on left: 14 15 16 17 18 19 20, on right: 12 13 14 15 16 17 18 19
expr4 (64)
    on left: 21 22 23, on right: 14 15 16 17 18 19 20 21 22
expr5 (65)
    on left: 24 25 26 27, on right: 21 22 23 24 25 26
expr6 (66)
    on left: 28 29, on right: 24 25 26 27 28
expr7 (67)
    on left: 30 31 32, on right: 28 29 30 31
expr8 (68)
    on left: 33 34 35, on right: 32 33 34
expr9 (69)
    on left: 36 37 38 39, on right: 35
atomic (70)
    on left: 40 41 42 43 44 45 46 47, on right: 39
arr_idx (71)
    on left: 48 49, on right: 38 48
ident (72)
    on left: 50, on right: 37 38 47 60 61 62 63 70
type (73)
    on left: 51 52 53 54 55 56 57 58 59, on right: 58 59 60 61 62 63
    70
decl (74)
    on left: 60 61 62 63, on right: 64 89
decl_list (75)
    on left: 64 65, on right: 1 64
params_or_e (76)
    on left: 66 67, on right: 59
param_list (77)
    on left: 68 69, on right: 66 68
param (78)
    on left: 70, on right: 68 69
stmts_or_e (79)
    on left: 71 72, on right: 60 87
stmt_list (80)
    on left: 73 74, on right: 71 73
stmt (81)
    on left: 75 76, on right: 73 74 80
stmt1 (82)
    on left: 77 78 79 80, on right: 75 77 78 79
stmt2 (83)
    on left: 81 82 83 84, on right: 76 79 81 82 83
stmt3 (84)
    on left: 85 86 87 88 89, on right: 84


State 0

    0 $accept: . program TOKEN_EOF

    TOKEN_IDENT  shift, and go to state 1

    $default  reduce using rule 65 (decl_list)

    program    go to state 2
    ident      go to state 3
    decl       go to state 4
    decl_list  go to state 5


State 1

   50 ident: TOKEN_IDENT .

    $default  reduce using rule 50 (ident)


State 2

    0 $accept: program . TOKEN_EOF

    TOKEN_EOF  shift, and go to state 6


State 3

   60 decl: ident . TOKEN_COLON type TOKEN_ASSIGN TOKEN_LBRACE stmts_or_e TOKEN_RBRACE
   61     | ident . TOKEN_COLON type TOKEN_ASSIGN expr TOKEN_SEMICOLON
   62     | ident . TOKEN_COLON type TOKEN_SEMICOLON
   63     | ident . TOKEN_COLON type

    TOKEN_COLON  shift, and go to state 7


State 4

   64 decl_list: decl . decl_list

    TOKEN_IDENT  shift, and go to state 1

    $default  reduce using rule 65 (decl_list)

    ident      go to state 3
    decl       go to state 4
    decl_list  go to state 8


State 5

    1 program: decl_list . TOKEN_EOF

    TOKEN_EOF  shift, and go to state 9


State 6

    0 $accept: program TOKEN_EOF .

    $default  accept


State 7

   60 decl: ident TOKEN_COLON . type TOKEN_ASSIGN TOKEN_LBRACE stmts_or_e TOKEN_RBRACE
   61     | ident TOKEN_COLON . type TOKEN_ASSIGN expr TOKEN_SEMICOLON
   62     | ident TOKEN_COLON . type TOKEN_SEMICOLON
   63     | ident TOKEN_COLON . type

    TOKEN_ARRAY   shift, and go to state 10
    TOKEN_AUTO    shift, and go to state 11
    TOKEN_BOOL    shift, and go to state 12
    TOKEN_CHAR    shift, and go to state 13
    TOKEN_FLOAT   shift, and go to state 14
    TOKEN_FUNC    shift, and go to state 15
    TOKEN_INT     shift, and go to state 16
    TOKEN_STRING  shift, and go to state 17
    TOKEN_VOID    shift, and go to state 18

    type  go to state 19


State 8

   64 decl_list: decl decl_list .

    $default  reduce using rule 64 (decl_list)


State 9

    1 program: decl_list TOKEN_EOF .

    $default  reduce using rule 1 (program)


State 10

   58 type: TOKEN_ARRAY . TOKEN_LBRACKET expr_or_e TOKEN_RBRACKET type

    TOKEN_LBRACKET  shift, and go to state 20


State 11

   56 type: TOKEN_AUTO .

    $default  reduce using rule 56 (type)


State 12

   55 type: TOKEN_BOOL .

    $default  reduce using rule 55 (type)


State 13

   51 type: TOKEN_CHAR .

    $default  reduce using rule 51 (type)


State 14

   54 type: TOKEN_FLOAT .

    $default  reduce using rule 54 (type)


State 15

   59 type: TOKEN_FUNC . type TOKEN_LPAREN params_or_e TOKEN_RPAREN

    TOKEN_ARRAY   shift, and go to state 10
    TOKEN_AUTO    shift, and go to state 11
    TOKEN_BOOL    shift, and go to state 12
    TOKEN_CHAR    shift, and go to state 13
    TOKEN_FLOAT   shift, and go to state 14
    TOKEN_FUNC    shift, and go to state 15
    TOKEN_INT     shift, and go to state 16
    TOKEN_STRING  shift, and go to state 17
    TOKEN_VOID    shift, and go to state 18

    type  go to state 21


State 16

   53 type: TOKEN_INT .

    $default  reduce using rule 53 (type)


State 17

   52 type: TOKEN_STRING .

    $default  reduce using rule 52 (type)


State 18

   57 type: TOKEN_VOID .

    $default  reduce using rule 57 (type)


State 19

   60 decl: ident TOKEN_COLON type . TOKEN_ASSIGN TOKEN_LBRACE stmts_or_e TOKEN_RBRACE
   61     | ident TOKEN_COLON type . TOKEN_ASSIGN expr TOKEN_SEMICOLON
   62     | ident TOKEN_COLON type . TOKEN_SEMICOLON
   63     | ident TOKEN_COLON type .

    TOKEN_SEMICOLON  shift, and go to state 22
    TOKEN_ASSIGN     shift, and go to state 23

    $default  reduce using rule 63 (decl)


State 20

   58 type: TOKEN_ARRAY TOKEN_LBRACKET . expr_or_e TOKEN_RBRACKET type

    TOKEN_IDENT        shift, and go to state 1
    TOKEN_TYPE_INT     shift, and go to state 24
    TOKEN_TYPE_FLOAT   shift, and go to state 25
    TOKEN_TYPE_STRING  shift, and go to state 26
    TOKEN_TYPE_CHAR    shift, and go to state 27
    TOKEN_FALSE        shift, and go to state 28
    TOKEN_TRUE         shift, and go to state 29
    TOKEN_NOT          shift, and go to state 30
    TOKEN_LBRACE       shift, and go to state 31
    TOKEN_LPAREN       shift, and go to state 32
    TOKEN_HYPHEN       shift, and go to state 33

    $default  reduce using rule 7 (expr_or_e)

    expr_or_e  go to state 34
    expr       go to state 35
    expr1      go to state 36
    expr2      go to state 37
    expr3      go to state 38
    expr4      go to state 39
    expr5      go to state 40
    expr6      go to state 41
    expr7      go to state 42
    expr8      go to state 43
    expr9      go to state 44
    atomic     go to state 45
    ident      go to state 46


State 21

   59 type: TOKEN_FUNC type . TOKEN_LPAREN params_or_e TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 47


State 22

   62 decl: ident TOKEN_COLON type TOKEN_SEMICOLON .

    $default  reduce using rule 62 (decl)


State 23

   60 decl: ident TOKEN_COLON type TOKEN_ASSIGN . TOKEN_LBRACE stmts_or_e TOKEN_RBRACE
   61     | ident TOKEN_COLON type TOKEN_ASSIGN . expr TOKEN_SEMICOLON

    TOKEN_IDENT        shift, and go to state 1
    TOKEN_TYPE_INT     shift, and go to state 24
    TOKEN_TYPE_FLOAT   shift, and go to state 25
    TOKEN_TYPE_STRING  shift, and go to state 26
    TOKEN_TYPE_CHAR    shift, and go to state 27
    TOKEN_FALSE        shift, and go to state 28
    TOKEN_TRUE         shift, and go to state 29
    TOKEN_NOT          shift, and go to state 30
    TOKEN_LBRACE       shift, and go to state 48
    TOKEN_LPAREN       shift, and go to state 32
    TOKEN_HYPHEN       shift, and go to state 33

    expr    go to state 49
    expr1   go to state 36
    expr2   go to state 37
    expr3   go to state 38
    expr4   go to state 39
    expr5   go to state 40
    expr6   go to state 41
    expr7   go to state 42
    expr8   go to state 43
    expr9   go to state 44
    atomic  go to state 45
    ident   go to state 46


State 24

   40 atomic: TOKEN_TYPE_INT .

    $default  reduce using rule 40 (atomic)


State 25

   41 atomic: TOKEN_TYPE_FLOAT .

    $default  reduce using rule 41 (atomic)


State 26

   42 atomic: TOKEN_TYPE_STRING .

    $default  reduce using rule 42 (atomic)


State 27

   43 atomic: TOKEN_TYPE_CHAR .

    $default  reduce using rule 43 (atomic)


State 28

   45 atomic: TOKEN_FALSE .

    $default  reduce using rule 45 (atomic)


State 29

   44 atomic: TOKEN_TRUE .

    $default  reduce using rule 44 (atomic)


State 30

   31 expr7: TOKEN_NOT . expr7

    TOKEN_IDENT        shift, and go to state 1
    TOKEN_TYPE_INT     shift, and go to state 24
    TOKEN_TYPE_FLOAT   shift, and go to state 25
    TOKEN_TYPE_STRING  shift, and go to state 26
    TOKEN_TYPE_CHAR    shift, and go to state 27
    TOKEN_FALSE        shift, and go to state 28
    TOKEN_TRUE         shift, and go to state 29
    TOKEN_NOT          shift, and go to state 30
    TOKEN_LBRACE       shift, and go to state 31
    TOKEN_LPAREN       shift, and go to state 32
    TOKEN_HYPHEN       shift, and go to state 33

    expr7   go to state 50
    expr8   go to state 43
    expr9   go to state 44
    atomic  go to state 45
    ident   go to state 46


State 31

   46 atomic: TOKEN_LBRACE . expr_list TOKEN_RBRACE

    TOKEN_IDENT        shift, and go to state 1
    TOKEN_TYPE_INT     shift, and go to state 24
    TOKEN_TYPE_FLOAT   shift, and go to state 25
    TOKEN_TYPE_STRING  shift, and go to state 26
    TOKEN_TYPE_CHAR    shift, and go to state 27
    TOKEN_FALSE        shift, and go to state 28
    TOKEN_TRUE         shift, and go to state 29
    TOKEN_NOT          shift, and go to state 30
    TOKEN_LBRACE       shift, and go to state 31
    TOKEN_LPAREN       shift, and go to state 32
    TOKEN_HYPHEN       shift, and go to state 33

    expr_list  go to state 51
    expr       go to state 52
    expr1      go to state 36
    expr2      go to state 37
    expr3      go to state 38
    expr4      go to state 39
    expr5      go to state 40
    expr6      go to state 41
    expr7      go to state 42
    expr8      go to state 43
    expr9      go to state 44
    atomic     go to state 45
    ident      go to state 46


State 32

   36 expr9: TOKEN_LPAREN . expr TOKEN_RPAREN

    TOKEN_IDENT        shift, and go to state 1
    TOKEN_TYPE_INT     shift, and go to state 24
    TOKEN_TYPE_FLOAT   shift, and go to state 25
    TOKEN_TYPE_STRING  shift, and go to state 26
    TOKEN_TYPE_CHAR    shift, and go to state 27
    TOKEN_FALSE        shift, and go to state 28
    TOKEN_TRUE         shift, and go to state 29
    TOKEN_NOT          shift, and go to state 30
    TOKEN_LBRACE       shift, and go to state 31
    TOKEN_LPAREN       shift, and go to state 32
    TOKEN_HYPHEN       shift, and go to state 33

    expr    go to state 53
    expr1   go to state 36
    expr2   go to state 37
    expr3   go to state 38
    expr4   go to state 39
    expr5   go to state 40
    expr6   go to state 41
    expr7   go to state 42
    expr8   go to state 43
    expr9   go to state 44
    atomic  go to state 45
    ident   go to state 46


State 33

   30 expr7: TOKEN_HYPHEN . expr7

    TOKEN_IDENT        shift, and go to state 1
    TOKEN_TYPE_INT     shift, and go to state 24
    TOKEN_TYPE_FLOAT   shift, and go to state 25
    TOKEN_TYPE_STRING  shift, and go to state 26
    TOKEN_TYPE_CHAR    shift, and go to state 27
    TOKEN_FALSE        shift, and go to state 28
    TOKEN_TRUE         shift, and go to state 29
    TOKEN_NOT          shift, and go to state 30
    TOKEN_LBRACE       shift, and go to state 31
    TOKEN_LPAREN       shift, and go to state 32
    TOKEN_HYPHEN       shift, and go to state 33

    expr7   go to state 54
    expr8   go to state 43
    expr9   go to state 44
    atomic  go to state 45
    ident   go to state 46


State 34

   58 type: TOKEN_ARRAY TOKEN_LBRACKET expr_or_e . TOKEN_RBRACKET type

    TOKEN_RBRACKET  shift, and go to state 55


State 35

    6 expr_or_e: expr .

    $default  reduce using rule 6 (expr_or_e)


State 36

    8 expr: expr1 . TOKEN_ASSIGN expr
    9     | expr1 .
   10 expr1: expr1 . TOKEN_OR expr2

    TOKEN_OR      shift, and go to state 56
    TOKEN_ASSIGN  shift, and go to state 57

    $default  reduce using rule 9 (expr)


State 37

   11 expr1: expr2 .
   12 expr2: expr2 . TOKEN_AND expr3

    TOKEN_AND  shift, and go to state 58

    $default  reduce using rule 11 (expr1)


State 38

   13 expr2: expr3 .
   14 expr3: expr3 . TOKEN_LT expr4
   15      | expr3 . TOKEN_LE expr4
   16      | expr3 . TOKEN_GT expr4
   17      | expr3 . TOKEN_GE expr4
   18      | expr3 . TOKEN_EQ expr4
   19      | expr3 . TOKEN_NE expr4

    TOKEN_EQ  shift, and go to state 59
    TOKEN_LE  shift, and go to state 60
    TOKEN_GE  shift, and go to state 61
    TOKEN_LT  shift, and go to state 62
    TOKEN_GT  shift, and go to state 63
    TOKEN_NE  shift, and go to state 64

    $default  reduce using rule 13 (expr2)


State 39

   20 expr3: expr4 .
   21 expr4: expr4 . TOKEN_ADD expr5
   22      | expr4 . TOKEN_HYPHEN expr5
